# csa-inabox

./: .checkov.yaml  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .release-please-config.json  .todo-nav-reorg.md  .trivyignore  Alerts.bicep  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  README.md  RELEASE.md  REPO_SPLIT.md  SECURITY.md  SUPPORT.md  THIRD-PARTY-NOTICES.md  THIRD_PARTY_LICENSES.md  alz-log-analytics-storage.bicep  alz-log-analytics.bicep  csa_loom_weave_epic.md  mkdocs.yml  package-lock.json  perf-budgets.json  perf-budgets.md  pyproject.toml  release-notes.md  uat-runner-v2.sh
.claude/: .gitignore  DEVELOPMENT_LOG.md  FAILED_ATTEMPTS.md  LOOM_AUTOPILOT_RESUME.md  SESSION_KNOWLEDGE.md  TOOL_REGISTRY.md  migrated-archon-tasks.md  settings.json
.claude/commands/: fabric-parity-loop.md
.claude/rules/: archon-workflow.md  no-fabric-dependency.md  no-vaporware.md  session-end.md  tool-specifications.md  ui-parity.md  ux-baseline.md  web3-ui.md
.claude/workflows/: README.md  fabric-parity-loop.md  loom-audit-asks.js  loom-audit-deep.js  loom-backlog-drain.js  loom-drain-tutorials.js  loom-fabric-parity-prp.js  loom-integrate-open-prs.js  loom-unleash-fast.js  loom-unleash.js
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  csa-bug.yml  csa-feature-request.yml  csa-uncovered.yml  data_product_onboarding.md  feature_request.md  feature_request.yml
.github/scripts/: copilot_backlog_drain.py  fiab-orphan-sweep.sh  fiab-post-provision-validate.sh  fiab-smoke-test.sh  fiab-teardown.sh  loom-validate-live.sh  sanitize_issue_for_claude.py
.github/workflows/: bicep-whatif.yml  build-fiab-images-acr-tasks.yml  build-fiab-images.yml  codeql.yml  console-bluegreen-roll.yml  copilot-auto-fix.yml  copilot-auto-merge.yml  copilot-backlog-drain.yml  copilot-evals.yml  copilot-quality-evals.yml  csa-loom-attempt-interactive-grants.yml  csa-loom-build2026-rescan-reminder.yml  csa-loom-demo-seed.yml  csa-loom-exercise-services.yml  csa-loom-grant-delta-sharing.yml  csa-loom-grant-synapse-rbac.yml  csa-loom-grant-uami-roles.yml  csa-loom-grant-warehouse-use.yml  csa-loom-memory-consolidate.yml  csa-loom-post-deploy-bootstrap.yml  csa-loom-provision-compute.yml  csa-loom-shir-idle-stop.yml  csa-loom-skill-learner.yml  csa-loom-spark-keepwarm.yml  csa-loom-spark-livy-probe.yml  csa-loom-spark-probe2.yml  csa-loom-spark-probe3.yml  csa-loom-synapse-spark-fix.yml  csa-loom-tutorial-capture.yml  csa-loom-validate.yml  csa-loom-wire-navigators.yml  dbt-ci-smoke.sh  dbt-ci.yml  deploy-copilot-function.yml  deploy-dbt.yml  deploy-fiab-commercial.yml  deploy-fiab-gcc.yml  deploy-fiab-gcch.yml  deploy-fiab-il5.yml  deploy-gov.yml  (+57 more)
.harness/: config.json  session-notes.md  spec.md  state.json
PRPs/active/: OPEN-REGISTER-2026-07-12.md
PRPs/v2/: PRP-26-data-marketplace.md  PRP-39-copilot-every-pane.md  README.md
_archived/: README.md
_archived/static-webapp-svelte/: .env.example  README.md  package.json  staticwebapp.config.json  tailwind.config.js
agent-harness/: README.md  config.yaml
agent-harness/gates/: validate-all.ps1  validate-dbt.ps1  validate-deployment.ps1  validate-python.ps1
agent-harness/task-templates/: templates.json
agent-harness/tests/: integration-test.ps1
apps/: __init__.py
apps/copilot/: README.md  __init__.py  agent.py  agent_loop.py  cli.py  config.py  conversation.py  grounding.py  indexer.py  models.py
apps/copilot-maf/: Dockerfile  README.md  package.json  tsconfig.json
apps/copilot/ai_functions/: README.md  __init__.py  _auth.py  _batch.py  _client.py  _config.py  _embed.py  _errors.py  _gate.py  _prompts.py  functions.py  pyproject.toml
apps/copilot/ai_functions/tests/: __init__.py  conftest.py  test_auth.py  test_batch.py  test_client.py  test_config.py  test_functions.py  test_gate.py
apps/fiab-setup-orchestrator/: Dockerfile  README.md  pyproject.toml
apps/fiab-setup-orchestrator/src/loom_setup_orchestrator/: deployment_state.py  main.py  orchestrator.py  telemetry.py  topology_client.py
apps/fiab-setup-orchestrator/tests/: test_orchestrator.py
apps/loom-directlake/: .dockerignore  Cargo.toml  Dockerfile  README.md
apps/loom-directlake/fixtures/: sales.parquet
apps/loom-directlake/src/: main.rs  scan.rs
cli/: README.md  __main__.py  client.py  formatters.py
csa_platform/: README.md  __init__.py  config.py
decision-trees/: README.md  batch-vs-streaming.yaml  delta-vs-iceberg-vs-parquet.yaml  etl-vs-elt.yaml  fabric-vs-databricks-vs-synapse.yaml  kafka-vs-eventhubs-vs-servicebus.yaml  lakehouse-vs-warehouse-vs-lake.yaml  materialize-vs-virtualize.yaml  rag-vs-finetune-vs-agents.yaml
deploy/: README.md
dev-loop/: README.md  config.yaml
docs/: ADF_SETUP.md  ARCHITECTURE.md  COST_MANAGEMENT.md  DATABRICKS_GUIDE.md  DEVELOPER_PATHWAYS.md  DR.md  ENVIRONMENT_PROTECTION.md  GETTING_STARTED.md  GOV_SERVICE_MATRIX.md  IaC-CICD-Best-Practices.md  LOG_SCHEMA.md  MULTI_REGION.md  MULTI_TENANT.md  PLATFORM_SERVICES.md  PRODUCTION_CHECKLIST.md  QUICKSTART.md  ROLLBACK.md  SELF_HOSTED_IR.md  SUCCESSION.md  SUPPLY_CHAIN.md  TROUBLESHOOTING.md  chat.md  cloud-shell-snippets.md  copilot-analytics.md  copilot-privacy.md  csa_loom_learning_hub.md  fabric-in-gov-cloud.md  index.md
domains/: README.md
examples/: README.md
governance/: README.md  __init__.py
great_expectations/: great_expectations.yml
monitoring/: README.md
overrides/: 404.html  main.html
platform/: README.md
portal/: README.md
requirements/: README.md
scripts/: README.md  check_urls.py  check_urls_browser.py  deploy-geoanalytics.sh  deploy-oss-stack.sh  deploy-streaming.sh  deploy-vertical.sh  lint-vertical.sh  migrate_portal_persistence.py  new-vertical.sh  precommit_bicep_build.sh  precommit_validate_contracts.py  update-locks.sh
tests/: README.md  conftest.py  test_data_quality.py
(+10865 files in other folders)
