[project]
name = "csa-inabox"
version = "0.1.0"
description = "Cloud-Scale Analytics in-a-Box — Azure Data Mesh Platform"
requires-python = ">=3.10"
license = "MIT"

dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0,<1.0.0",
    "pytest>=7.0.0,<10.0.0",
    "pytest-cov>=4.0.0,<8.0.0",
    "pytest-asyncio>=0.23.0,<2.0.0",
    "mypy>=1.0.0,<2.0.0",
    "bandit>=1.7.5,<2.0.0",
    "pre-commit>=3.5.0,<5.0.0",
    # structlog is a governance runtime dep but tests for the shared
    # logging helper need it available in the dev env too.
    "structlog>=24.1.0,<26.0.0",
    # Type stubs for third-party libraries that lack inline types — kept
    # here (and not under governance extras) so mypy always sees them
    # during a `pip install -e ".[dev]"` workflow.
    "types-PyYAML>=6.0,<7.0",
    "types-requests>=2.31.0,<3.0.0",
]
governance = [
    "pyyaml>=6.0,<7.0",
    "azure-monitor-ingestion>=1.0.0,<2.0.0",
    # Structured JSON logging with trace/correlation context — see
    # governance/common/logging.py and docs/LOG_SCHEMA.md.
    "structlog>=24.1.0,<26.0.0",
    # great-expectations: The ge_runner.py checkpoint runner uses an in-memory
    # fallback evaluator; no GE config/checkpoints exist yet. Re-add when a
    # Spark-backed checkpoint pipeline is implemented.
    # "great-expectations>=1.0.0",
]
functions = [
    # Azure Functions host SDK — required by all function_app.py modules.
    "azure-functions>=1.18.0,<2.0.0",
    # Retry logic for transient Azure SDK failures.
    "tenacity>=8.2.0,<10.0.0",
    # Azure SDK packages used by the shared_services functions.
    "azure-core>=1.28.0,<2.0.0",
    "azure-identity>=1.17.0,<2.0.0",
    "azure-keyvault-secrets>=4.7.0,<5.0.0",
    "azure-storage-blob>=12.20.0,<13.0.0",
    "azure-mgmt-storage>=21.0.0,<25.0.0",
    "azure-mgmt-cosmosdb>=9.0.0,<10.0.0",
    "azure-mgmt-sql>=3.0.0,<4.0.0",
    "structlog>=24.1.0,<26.0.0",
    # AI Enrichment function deps
    "azure-ai-textanalytics>=5.3.0,<6.0.0",
    "azure-ai-formrecognizer>=3.3.0,<4.0.0",
    # Event Processing function deps
    "azure-eventhub>=5.11.0,<6.0.0",
    "azure-cosmos>=4.5.0,<5.0.0",
]
platform = [
    "structlog>=24.1.0,<26.0.0",
    "tenacity>=8.2.0,<10.0.0",
    "openai>=1.0.0,<3.0.0",
    "azure-identity>=1.17.0,<2.0.0",
    "azure-search-documents>=11.4.0,<12.0.0",
    "requests>=2.31.0,<3.0.0",
    # AI integration extras
    "azure-ai-textanalytics>=5.3.0,<6.0.0",
    "azure-ai-ml>=1.16.0,<2.0.0",
    "tiktoken>=0.7.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "pyyaml>=6.0,<7.0",
    # Direct Lake / Databricks
    "databricks-sdk>=0.20.0,<1.0.0",
    # Multi-Synapse management
    "azure-mgmt-synapse>=2.0.0,<3.0.0",
    "azure-mgmt-costmanagement>=3.0.0,<5.0.0",
    "azure-mgmt-authorization>=4.0.0,<5.0.0",
    "pyodbc>=5.0.0,<6.0.0",
    # OneLake pattern
    "azure-storage-blob>=12.20.0,<13.0.0",
    "azure-cosmos>=4.5.0,<5.0.0",
]
portal = [
    # Web framework
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    # Authentication (Azure AD / Entra ID JWT)
    "PyJWT>=2.8.0,<3.0.0",
    "cryptography>=41.0.0,<47.0.0",
    # Caching (JWKS TTL cache)
    "cachetools>=5.3.0,<8.0.0",
    # HTTP client
    "httpx>=0.27.0,<1.0.0",
    # Azure SDKs used by portal backend
    "azure-identity>=1.17.0,<2.0.0",
    "azure-mgmt-resource>=23.1.0,<26.0.0",
    "azure-mgmt-datafactory>=7.0.0,<10.0.0",
    "azure-storage-blob>=12.20.0,<13.0.0",
]

[tool.setuptools]
# Installable Python packages.  The governance package ships the data-
# quality / contracts toolchain; csa_platform ships the reusable platform
# service modules (AI integration, data marketplace, metadata framework,
# etc.).  Everything else (deploy/, domains/, templates/, scripts/) is
# non-Python or uses its own import mechanics (Azure Functions, dbt,
# Databricks).
#
# ``find_packages`` is used for csa_platform so that new sub-packages
# under csa_platform/ are auto-discovered; governance is pinned because
# its layout is stable and explicit listing documents the public surface.

[tool.setuptools.packages.find]
include = ["governance*", "csa_platform*"]
exclude = ["*.tests", "*.tests.*", "tests*"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["domains", "scripts", "governance", "agent-harness"]
# Exclude empty/placeholder files that aren't valid Python/Notebook.
extend-exclude = ["scripts/monitor/SynapseTroubleshooting.ipynb", "domains/spark/ArcGIS_GeoAnalyticsEngine"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "ISC",    # flake8-implicit-str-concat
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "ERA",    # eradicate
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "COM812", # missing trailing comma (conflicts with formatter)
    "ISC001", # single-line implicit string concat (conflicts with formatter)
    "RUF013", # implicit-optional (codebase uses `param: X = None` style)
    "TC003",  # typing-only-standard-library-import (optimization, not a bug)
    "TC002",  # typing-only-third-party-import (optimization, not a bug)
    "TC001",  # typing-only-first-party-import (optimization, not a bug)
    "SIM108", # if-else-block-instead-of-if-exp (readability preference)
]

[tool.ruff.lint.per-file-ignores]
# Databricks notebooks use `spark`, `dbutils`, `display` as runtime globals,
# `# MAGIC` / `# COMMAND` comment syntax, `from pyspark.sql.functions import *`,
# top-of-cell imports, and PySpark naming conventions (`functions as F`).
# These are all inherent to the Databricks notebook format — not real issues.
"**/notebooks/**/*.py" = [
    "F821",    # undefined-name (spark, dbutils, display)
    "F403",    # undefined-local-with-import-star
    "F405",    # undefined-local-with-import-star-usage
    "ERA001",  # commented-out code (# MAGIC / # COMMAND lines)
    "E402",    # module-import-not-at-top-of-file (cell-based execution)
    "N806",    # non-lowercase-variable-in-function (PySpark conventions)
    "N812",    # lowercase-imported-as-non-lowercase (functions as F)
    "N803",    # invalid-argument-name (X for feature matrix — ML convention)
    "E712",    # true-false-comparison (PySpark Column == True)
    "E701",    # multiple-statements-on-one-line (notebook compact style)
    "RUF059",  # unused-unpacked-variable (exploratory analysis)
    "F841",    # unused-variable (intermediate analysis variables)
    "F401",    # unused-import (notebook cell imports)
    "B023",    # function-uses-loop-variable (notebook closures)
    "ARG001",  # unused-function-argument (UDF signatures)
    "ARG005",  # unused-lambda-argument (UDF signatures)
    "DTZ003",  # call-datetime-utcnow (notebook logging/display)
    "DTZ005",  # call-datetime-now-without-tzinfo (notebook timestamps)
    "DTZ001",  # call-datetime-without-tzinfo (notebook date ranges)
    "DTZ007",  # call-datetime-strptime-without-zone (notebook date parsing)
    "B905",    # zip-without-explicit-strict (notebook iteration)
    "RUF005",  # collection-literal-concatenation (pandas column assignment)
]
# Azure Functions use camelCase binding names (cosmosOutput, outputBlob)
# enforced by the host, and `req` parameters required by the framework.
"**/functions/function_app.py" = [
    "N803",    # invalid-argument-name (Azure binding names)
    "ARG001",  # unused-function-argument (req in health checks)
    "N806",    # non-lowercase-variable-in-function (MAX_BLOB_SIZE constants)
]
# FastAPI routers and auth helpers use Depends(), Query(), Header() in
# default args (idiomatic).  Covers both service-local routers under
# ``api/`` and the shared csa_platform.common.auth module.
"**/api/**/*.py" = [
    "B008",    # function-call-in-default-argument (FastAPI DI)
]
"csa_platform/common/auth.py" = [
    "B008",    # function-call-in-default-argument (FastAPI DI)
]
# Data generators and ETL scripts use datetime freely for synthetic data.
"**/data/generators/**/*.py" = [
    "DTZ005",  # call-datetime-now-without-tzinfo (synthetic timestamps)
    "DTZ001",  # call-datetime-without-tzinfo (synthetic date ranges)
    "DTZ003",  # call-datetime-utcnow (generator timestamps)
    "DTZ007",  # call-datetime-strptime-without-zone (parsing CSV dates)
    "DTZ004",  # call-datetime-utcfromtimestamp (epoch conversion)
    "DTZ011",  # call-date-today (date generation)
    "B905",    # zip-without-explicit-strict (data pairing)
    "RUF012",  # mutable-class-default (data model classes)
]
"**/data/open-data/**/*.py" = [
    "DTZ005",  # call-datetime-now-without-tzinfo
    "DTZ001",  # call-datetime-without-tzinfo
    "DTZ003",  # call-datetime-utcnow
    "DTZ007",  # call-datetime-strptime-without-zone
    "DTZ004",  # call-datetime-utcfromtimestamp
    "DTZ011",  # call-date-today
    "B905",    # zip-without-explicit-strict
]
# Metadata framework module.
"csa_platform/metadata_framework/**/*.py" = []
# Test files may use mock objects with unused arguments and datetime freely.
"tests/**/*.py" = [
    "ARG001",  # unused-function-argument (mock/fixture params)
    "ARG002",  # unused-method-argument (mock overrides)
    "B008",    # function-call-in-default-argument (pytest fixtures)
]
# Exclude broken notebook (empty/malformed)
"scripts/monitor/SynapseTroubleshooting.ipynb" = [
    "E999",    # syntax-error (empty notebook file)
]
# Example streaming producers use signal handler signatures (signum, frame).
"examples/**/streaming/**/*.py" = [
    "ARG001",  # unused-function-argument (signal handler params)
]
# Example IoT producers have stub event generators.
"examples/iot-streaming/**/*.py" = [
    "ARG001",  # unused-function-argument (stub params)
]
# Platform code has many stub/mock method implementations.
"csa_platform/**/tests/**/*.py" = [
    "ARG001",  # unused-function-argument (fixtures)
    "ARG002",  # unused-method-argument (test fixtures)
    "E402",    # module-import-not-at-top-of-file (sys.path manipulation)
    "F841",    # unused-variable (test assertion intermediaries)
    "RUF043",  # regex-metachar-in-match (intentional regex in pytest.raises)
]

[tool.ruff.lint.isort]
known-first-party = ["domains", "governance"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
# Portal tests live in ``portal/shared/tests`` and are deliberately NOT
# included here: both that directory and the root ``tests/`` directory
# are Python packages (``__init__.py`` present) named ``tests``, which
# causes pytest's import mode to resolve them to the same module path
# ``tests.conftest`` and raise ``ImportPathMismatchError``.  The portal
# package is tested by its own ``pytest portal/shared/tests`` invocation
# (see Makefile / portal CI lane).  Refactoring to a single rootdir is
# tracked as a follow-up.
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "--tb=short -q --strict-markers"
markers = [
    "live: requires a live Azure connection (az login)",
]

[tool.coverage.run]
# Only measure the code under test today.  As new areas grow a real test
# suite (dbt Python runners, Azure Functions, agent harness gates),
# add them to this list alongside their tests.
source = [
    "governance/common",
    "governance/dataquality",
    "governance/contracts",
    "domains/sharedServices/aiEnrichment/functions",
    "domains/sharedServices/eventProcessing/functions",
    "domains/sharedServices/secretRotation/functions",
    # Platform and portal sources are measured here so coverage reports show
    # the true coverage gap.  They are excluded from the fail_under threshold
    # (currently 80%) until their test suites reach parity — do NOT raise
    # fail_under to account for these until tests are in place.
    # See `make test` and the coverage report.
    "csa_platform",
    "portal/shared/api",
]
branch = true
omit = [
    "tests/*",
    "**/__init__.py",
    "**/conftest.py",
    "**/test_*.py",
]

[tool.coverage.report]
# CI fails the job if total coverage for the source packages above drops
# below this threshold (see .github/workflows/test.yml).  The threshold
# ratchets upward as the test suite grows — do not lower it without an
# explicit justification in the commit message.
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.mypy]
python_version = "3.10"
# Strict mode is enabled globally. New code is expected to pass strict
# checks; when adding a new module that cannot yet comply, prefer adding
# it to the overrides list below with an explicit reason rather than
# weakening this config.
strict = true
# Default target when ``mypy`` is run with no arguments: the governance
# package plus its tests. The two Azure Functions apps both ship a flat
# ``function_app.py`` at different paths, which otherwise collides at
# module resolution time — they are type-checked by dedicated ``mypy
# <path>`` invocations from the Makefile and the test.yml workflow so
# each app resolves as its own module. See ``make typecheck``.
files = [
    "governance",
    "tests",
]
# Third-party Azure SDK libraries still ship partial type info — stay
# lenient there, but keep strict checks on our own code.
ignore_missing_imports = false
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
# Platform modules use lazy SDK imports and dynamic client initialization.
# They are type-checked separately via ``make typecheck-platform`` (with
# --ignore-missing-imports) to allow progressive strictness adoption.  The
# default mypy run on ``governance`` + ``tests`` should not fail on type
# issues inside these modules when they are incidentally imported.
module = [
    "csa_platform.*",
]
ignore_errors = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# Portal API modules use dynamic JSON schemas (SQLite JSON blob columns)
# and method names that shadow built-in types (``list``/``save``).  The
# default ``governance`` + ``tests`` mypy run cannot always resolve these
# precisely when portal modules are incidentally imported by tests.  The
# portal package is type-checked directly in its own CI lane.
module = [
    "portal.*",
]
ignore_errors = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# Databricks notebooks rely on spark / dbutils / display globals that
# mypy cannot resolve.  Type hints are still added for IDE support, but
# static analysis is disabled so mypy does not fail the CI.
module = [
    "domains.shared.notebooks.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
# Load-test harnesses are not part of the deployable toolchain — they run
# manually via the ``load-tests.yml`` workflow_dispatch.  Ignore them so
# strict mode stays useful for the rest of the tree.
module = [
    "tests.load.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
# Platform tests use dynamic imports via conftest.py namespace registration
# (hyphenated sub-directories require manual sys.modules setup).  The test
# files also mock Azure SDK types extensively, which produces false
# positive type errors.  They are functionally tested via pytest.
module = [
    "tests.csa_platform.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
# Third-party packages that do not ship inline type stubs.  Rather than
# blanket-ignoring all missing imports globally, we list them explicitly
# so our own code and typed dependencies are still checked.
module = [
    "azure.*",
    "great_expectations.*",
    "tenacity.*",
    "structlog.*",
    "openai.*",
    "cachetools.*",
    "duckdb.*",
]
ignore_missing_imports = true

[tool.bandit]
# Exclude tests (assertions) and known-safe subprocess / random patterns:
#   B101 - assert_used (tests use assert)
#   B311 - random (data generators use pseudo-random, not crypto)
#   B404 - import_subprocess (dbt runner, seed scripts need subprocess)
#   B603 - subprocess_without_shell_equals_true (intentional — shell=False is safer)
#   B607 - start_process_with_partial_path (dbt CLI invocations)
#   B608 - hardcoded_sql_expressions (false positive on f-string print statements)
skips = ["B101", "B311", "B404", "B603", "B607", "B608"]
exclude_dirs = ["tests", ".venv", "dbt-env", "node_modules"]
